# embedding-server

./: .dockerignore  .gitignore  Dockerfile  main.py  preload.py  pyproject.toml
.github/workflows/: docker-image.yml
